--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.5",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
